fixed the aside to align.
I was able to get the aside under grooming to align properly, but the
3rd dog-divider is now wrong. odd since it isn’t or shouldn’t be
affected by the content of the aside and its location within the
“content” div.

--- a/source/stylesheet.css
+++ b/source/stylesheet.css
@@ -134,7 +134,14 @@ section {
     font-size: 2vw;
 }
 
+.primary{
+    width: 55%;
+    float: left;
+}
+
 aside{
+    width: 20%
+    margin-left: 5%;
     float: right;
 }
 
